# protocrawl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/agent-prompts/: formatter.md  normalizer.md  parser.md  publisher.md  source_scout.md  triage.md
frontend/: tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  LibraryStructure.tsx  States.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: NotFound.tsx  ProtocolDetailPage.tsx  ProtocolsPage.tsx  SubmissionsPage.tsx
infra/: main.tf  setup.sh  variables.tf
seeds/: sources.yaml
seeds/protocols/: 10x_atac_v2.yaml  10x_chromium_3prime_v3.yaml  10x_chromium_5prime_v2.yaml  10x_flex.yaml  10x_multiome.yaml  10x_xenium.yaml  bulk_rna_seq.yaml  cel_seq2.yaml  cite_seq.yaml  drop_seq.yaml  indrops_v3.yaml  merfish.yaml  parse_evercode_wt.yaml  sci_atac_seq.yaml  sci_rna_seq3.yaml  slide_seq_v2.yaml  smart_seq2.yaml  split_seq.yaml  strt_seq.yaml  visium_hd.yaml  visium_v1.yaml
src/protoclaw/: cli.py  config.py
src/protoclaw/agents/: root_agent.py
src/protoclaw/api/: app.py  dependencies.py
src/protoclaw/db/: engine.py  repositories.py  tables.py
tests/: conftest.py
tests/unit/: test_formatter_tools.py  test_gemini_client.py  test_models.py  test_normalizer_tools.py  test_parser_tools.py  test_publisher_tools.py  test_seeds.py  test_seqspec_tools.py  test_slack_service.py  test_source_scout_tools.py  test_submission_routes.py  test_triage_tools.py
(+34 files in other folders)
